# sd2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile
assets/shaders/: billboarding.slang  line.slang  proc_arrow.slang  shader.slang
cmake/: assets.cmake  deps.cmake
scripts/: profile-dwarf.sh  profile-fp.sh  profile-report.sh
shaders/: shader.slang
src/: VLA.hpp  arena.cpp  main.cpp  main2.cpp  sd2_inc.hpp  sd2_main.cpp
src/VLA/: Matrix.hpp  Vector.hpp
src/internal/: arena.cpp  arena.hpp  base.hpp  base_arena.cpp  base_arena.hpp  base_array.hpp  base_string.hpp  base_types.hpp  debug_ui.cpp  debug_ui.hpp  descriptor_arena.hpp  descriptor_schema.hpp  descriptor_writer.hpp  helpers.cpp  helpers.hpp  imgui_helpers.cpp  imgui_helpers.hpp  material_table.hpp  profiler.hpp  thread_ctx.hpp  vk_arena.hpp  vk_descriptor_cmd.hpp  vk_destructor_stack.hpp  vk_helpers.cpp  vk_helpers.hpp  window.cpp  window.hpp
textures/: _.speedscope.json
